samples/_failures_safe/1761661180_d9a885_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c5de046.c: In function ‘main’:
./samples/SAFE/__tmp_6c5de046.c:159:5: error: expected identifier or ‘(’ at end of input
  159 |     int
      |     ^~~
./samples/SAFE/__tmp_6c5de046.c:159:5: error: expected declaration or statement at end of input
